--- a/stepactions/eaas-create-ephemeral-cluster-hypershift-aws/0.1/eaas-create-ephemeral-cluster-hypershift-aws.yaml
+++ b/stepactions/eaas-create-ephemeral-cluster-hypershift-aws/0.1/eaas-create-ephemeral-cluster-hypershift-aws.yaml
@@ -38,6 +38,12 @@ spec:
       description: >-
         Alternate registry information containing a list of sources and their mirrors in yaml format.
         See: https://hypershift-docs.netlify.app/how-to/disconnected/image-content-sources
+    - name: imageContentSourcesFile
+      type: string
+      default: ""
+      description: >-
+        Absolute or workspace path to a file containing a list of sources and their mirrors in yaml format.
+        If set, this takes precedence over the inline imageContentSources string.
     - name: fips
       type: string
       default: "false"
@@ -63,6 +69,8 @@ spec:
       value: "$(params.timeout)"
     - name: IMAGE_CONTENT_SOURCES
       value: "$(params.imageContentSources)"
+    - name: IMAGE_CONTENT_SOURCES_FILE
+      value: "$(params.imageContentSourcesFile)"
     - name: TENANT
       value: "$(context.taskRun.namespace)"
     - name: FIPS
@@ -70,6 +78,23 @@ spec:
   script: |
     #!/bin/bash
     set -eo pipefail
+
+    # Resolve imageContentSources from file (if provided) or fallback to inline string
+    ICS_VALUE=""
+    if [[ -n "$IMAGE_CONTENT_SOURCES_FILE" ]]; then
+      if [[ -f "$IMAGE_CONTENT_SOURCES_FILE" ]]; then
+        ICS_VALUE="$(cat "$IMAGE_CONTENT_SOURCES_FILE")"
+        echo "Using imageContentSources from file: $IMAGE_CONTENT_SOURCES_FILE"
+      else
+        echo "ERROR: imageContentSourcesFile was provided but file not found: $IMAGE_CONTENT_SOURCES_FILE" >&2
+        exit 1
+      fi
+    elif [[ -n "$IMAGE_CONTENT_SOURCES" ]]; then
+      ICS_VALUE="$IMAGE_CONTENT_SOURCES"
+      echo "Using inline imageContentSources param"
+    fi
+
+    export ICS_VALUE
 
     cat <<EOF > cti.yaml
     ---
@@ -87,7 +112,7 @@ spec:
     yq -i '.spec.parameters += {"name": "instanceType", "value": strenv(INSTANCE_TYPE)}' cti.yaml
     yq -i '.spec.parameters += {"name": "version", "value": strenv(VERSION)}' cti.yaml
     yq -i '.spec.parameters += {"name": "timeout", "value": strenv(TIMEOUT)}' cti.yaml
-    yq -i '.spec.parameters += {"name": "imageContentSources", "value": strenv(IMAGE_CONTENT_SOURCES)}' cti.yaml
+    yq -i '.spec.parameters += {"name": "imageContentSources", "value": strenv(ICS_VALUE)}' cti.yaml
     yq -i '.spec.parameters += {"name": "fips", "value": strenv(FIPS)}' cti.yaml
 
     echo "Creating the following resource:"
