--- a/task/buildah/0.4/buildah.yaml
+++ b/task/buildah/0.4/buildah.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     tekton.dev/pipelines.minVersion: "0.12.1"
     tekton.dev/tags: "image-build, konflux"
+    build.appstudio.redhat.com/expires-on: 2025-10-11T00:00:00Z
   name: buildah
 spec:
   description: |-
