Fail task if missing actual task version
Since actual task version is required, task run has to fail if the
version is missing in task file. Both omitted label
app.kubernetes.io/version and its value fail the task run.

Signed-off-by: Chenxiong Qi <cqi@redhat.com>

--- a/task/tkn-bundle/0.2/tkn-bundle.yaml
+++ b/task/tkn-bundle/0.2/tkn-bundle.yaml
@@ -138,6 +138,8 @@ spec:
       set -o pipefail
       set -o nounset
 
+      LABEL_ACTUAL_TASK_VERSION=app.kubernetes.io/version
+
       # shellcheck disable=SC2153
       mapfile -t FILES <"${TASK_FILE}"
       [[ ${#FILES[@]} -eq 0 ]] &&
@@ -180,13 +182,18 @@ spec:
       get_actual_task_version() {
         local -r task_file=$1
         # Ensure an empty string is output rather than string "null" if the version label is not present
-        yq '.metadata.labels."app.kubernetes.io/version"' "$task_file" | sed '/null/d' | tr -d '[:space:]'
+        yq ".metadata.labels.\"${LABEL_ACTUAL_TASK_VERSION}\"" "$task_file" | sed '/null/d' | tr -d '[:space:]'
       }
 
       # task_dir is where the task definition reside
       # this task run for only one task file, so extracting it from the first element is enough
       task_dir=$(echo "${FILES[0]}" | awk -F'/' '{NF--; print $0}' OFS='/')
       actual_task_version=$(get_actual_task_version "${FILES[0]}")
+
+      if [[ -z "$actual_task_version" ]]; then
+        printf "Label %s is not set in task file %s\n" "$LABEL_ACTUAL_TASK_VERSION" "${FILES[0]}" >&2
+        exit 1
+      fi
 
       # If task is kustomized, generate it and replace the FILES value with the value of the generated task
       # All other files will be ignored.
