--- a/task-generator/trusted-artifacts/golden/prefetch-dependencies/base.yaml
+++ b/task-generator/trusted-artifacts/golden/prefetch-dependencies/base.yaml
@@ -107,11 +107,11 @@ spec:
       --for-output-dir=/cachi2/output
 
       # NOTE: Compatibility hack, hermeto will create a hermeto.repo when processing RPMs (1 for
-      # each architecture) which may break users expecting prefetch.repo
+      # each architecture) which may break users expecting prefetch.repo or legacy cachi2.repo
       find /var/workdir/cachi2/output \
         -type f \
         -name hermeto.repo \
-        -execdir mv {} prefetch.repo \;
+        -execdir mv {} cachi2.repo \; -execdir ln -s cachi2.repo prefetch.repo \;
 
   workspaces:
   - name: source
