--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -363,11 +363,11 @@ spec:
       --for-output-dir=/cachi2/output
 
       # NOTE: Compatibility hack, hermeto will create a hermeto.repo when processing RPMs (1 for
-      # each architecture) which may break users expecting prefetch.repo
+      # each architecture) which may break users expecting prefetch.repo or legacy cachi2.repo
       find "$(workspaces.source.path)/cachi2/output" \
         -type f \
         -name hermeto.repo \
-        -execdir mv {} prefetch.repo \;
+        -execdir mv {} cachi2.repo \; -execdir ln -s cachi2.repo prefetch.repo \;
 
       # hack: the OCI generator would delete the function since it doesn't consider trap a "usage"
       if false; then
