--- a/task-generator/trusted-artifacts/golden/prefetch-dependencies/base.yaml
+++ b/task-generator/trusted-artifacts/golden/prefetch-dependencies/base.yaml
@@ -100,6 +100,9 @@ spec:
       --for-output-dir=/cachi2/output \
       --output $(workspaces.source.path)/cachi2/prefetch.env
 
+      # backwards compatibility with legacy cachi2.env
+      ln -s "$(workspaces.source.path)/cachi2/prefetch.env" "$(workspaces.source.path)/cachi2/cachi2.env"
+
       hermeto --log-level="$LOG_LEVEL" inject-files $(workspaces.source.path)/cachi2/output \
       --for-output-dir=/cachi2/output
 
