--- a/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
@@ -426,6 +426,9 @@ spec:
           --for-output-dir=/cachi2/output \
           --output "/var/workdir/cachi2/prefetch.env"
 
+        # backwards compatibility with legacy cachi2.env
+        ln -s "/var/workdir/cachi2/prefetch.env" "/var/workdir/cachi2/cachi2.env"
+
         hermeto --log-level="$LOG_LEVEL" inject-files "/var/workdir/cachi2/output" \
           --for-output-dir=/cachi2/output
 
