Add content-sets.json to .containerignore
If a repository that includes an allow-list .containerignore is being
built on Konflux, files generated at build time that are injected into
the final image can not be copied.

This has been recently fixed for labels.json, do the same for
content-sets.json which is also being injected into the image.

Signed-off-by: Tomáš Nevrlka <tnevrlka@redhat.com>

--- a/task/buildah-min/0.5/buildah-min.yaml
+++ b/task/buildah-min/0.5/buildah-min.yaml
@@ -687,9 +687,11 @@ spec:
       if [ -n "$containerignore" ]; then
         ignorefile_copy=$(mktemp --tmpdir "$(basename "$containerignore").XXXXXX")
         cp "$containerignore" "$ignorefile_copy"
-
-        echo "" >> "$ignorefile_copy"
-        echo "!/labels.json" >> "$ignorefile_copy"
+        {
+          echo ""
+          echo "!/labels.json"
+          echo "!/content-sets.json"
+        } >> "$ignorefile_copy"
         BUILDAH_ARGS+=(--ignorefile "$ignorefile_copy")
       fi
 
