--- a/task/tkn-bundle/0.2/tkn-bundle.yaml
+++ b/task/tkn-bundle/0.2/tkn-bundle.yaml
@@ -220,13 +220,14 @@ spec:
           if [[ -z "$tag_name" ]]; then
             continue
           fi
-          if grep -s -E "^${tag_prefix}-${sha256_checksum}-[0-9]+$" <<<"$tag_name"; then
+          if grep -q -E "^${tag_prefix}-${sha256_checksum}-[0-9]+$" <<<"$tag_name"; then
             # In case migration file is pushed more than once occasionally, only pick
             # the last (newest) one
             if [[ -z "$migration_image_digest" ]]; then
+              printf "Found migration image %s, whose digest is %s\n" "$tag_name" "$manifest_digest" >&2
               migration_image_digest="$manifest_digest"
             fi
-          elif grep -s -E "^${tag_prefix}-[0-9a-f]{64}-[0-9]+$" <<<"$tag_name"; then
+          elif grep -q -E "^${tag_prefix}-[0-9a-f]{64}-[0-9]+$" <<<"$tag_name"; then
             printf "Modifying an existing migration is not allowed. Migration %s was pushed as image %s" \
               "${migration_file_path##*/}" "$tag_name" >&2
             exit 1
